--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,9 +20,32 @@ services:
       timeout: 5s
       retries: 5
 
+  rabbitmq:
+    image: rabbitmq:3-management
+    container_name: food-ordering-rabbitmq
+    ports:
+      - "5672:5672"  # AMQP protocol port
+      - "15672:15672"  # Management UI port
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-guest}
+      # Enable management plugin explicitly
+      RABBITMQ_PLUGINS: rabbitmq_management
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - food-ordering-network
+    healthcheck:
+      test: ["CMD", "rabbitmqctl", "status"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
 networks:
   food-ordering-network:
     driver: bridge
 
 volumes:
   postgres_data:
+  rabbitmq_data:
