fix: docker-compose env issue

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,10 @@ services:
       - RABBITMQ_ORDER_SERVICE_QUEUE=${RABBITMQ_ORDER_SERVICE_QUEUE}
       - RABBITMQ_RESTAURANT_SERVICE_QUEUE=${RABBITMQ_RESTAURANT_SERVICE_QUEUE}
       - RABBITMQ_WALLET_SERVICE_QUEUE=${RABBITMQ_WALLET_SERVICE_QUEUE}
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+      - JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}
+      - JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}
     networks:
       - food-ordering-network
     depends_on:
@@ -127,6 +131,10 @@ services:
       - RABBITMQ_ORDER_SERVICE_QUEUE=${RABBITMQ_ORDER_SERVICE_QUEUE}
       - RABBITMQ_RESTAURANT_SERVICE_QUEUE=${RABBITMQ_RESTAURANT_SERVICE_QUEUE}
       - RABBITMQ_WALLET_SERVICE_QUEUE=${RABBITMQ_WALLET_SERVICE_QUEUE}
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+      - JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}
+      - JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}
     networks:
       - food-ordering-network
     depends_on:
@@ -156,7 +164,11 @@ services:
       - RABBITMQ_USER_SERVICE_QUEUE=${RABBITMQ_USER_SERVICE_QUEUE}
       - RABBITMQ_ORDER_SERVICE_QUEUE=${RABBITMQ_ORDER_SERVICE_QUEUE}
       - RABBITMQ_RESTAURANT_SERVICE_QUEUE=${RABBITMQ_RESTAURANT_SERVICE_QUEUE}
-      - RABBITMQ_WALLET_SERVICE_QUEUE=${RABBITMQ_WALLET_SERVICE_QUEUE}   
+      - RABBITMQ_WALLET_SERVICE_QUEUE=${RABBITMQ_WALLET_SERVICE_QUEUE}
+      - JWT_ACCESS_SECRET=${JWT_ACCESS_SECRET}
+      - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
+      - JWT_ACCESS_EXPIRATION=${JWT_ACCESS_EXPIRATION}
+      - JWT_REFRESH_EXPIRATION=${JWT_REFRESH_EXPIRATION}  
     networks:
       - food-ordering-network
     depends_on:
